fix: Fix security filters, CORS methods, and JWT logging
Security and stability fixes across query-service:

- SecurityConfig: expanded CORS allowed methods to GET, POST, PUT, DELETE, OPTIONS and corrected lambda param naming.
- JwtAuthFilter: avoid re-authenticating when an authentication already exists (handles AnonymousAuthenticationToken) to prevent double-auth/NPEs.
- JwtUtil: log JWT validation failures for easier debugging.

These changes improve CORS support, prevent authentication edge-case bugs, and surface token validation errors.